--- a/GoodVibes/Views/Shared/_Layout.cshtml
+++ b/GoodVibes/Views/Shared/_Layout.cshtml
@@ -40,9 +40,9 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)*@
 
-	<link href="~/Content/bootstrap.css" rel="stylesheet" />
-	<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-	<link href="~/Content/Site.css" rel="stylesheet" />
+	<link href="~/Content/css/bootstrap.css" rel="stylesheet" />
+	<link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="~/Content/css/Site.css" rel="stylesheet" />
 
 </body>
 </html>
